UserNotFound view, main menu layout issues

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -81,26 +81,33 @@ img {
 	width:100%;
 }
 
-ul {
-	top: 0;
-	position:fixed;
-	list-style-type: none;
+.main-menu {
+	margin: 10px auto auto auto;
 	width: 960px;
-	margin: 0 auto;
-	li {
-		height:40px;
-		width: 100px;
-		float: left;
-		padding-top:10px;
-		xbackground-color: #357E35;
-		xbackground-image: -webkit-linear-gradient(top, #6CC16C, #357E35);
-		xbackground-image: -moz-linear-gradient(top, #6CC16C, #357E35);
-		xbackground-image: -ms-linear-gradient(top, #6CC16C, #357E35);
-		xfilter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6CC16C', endColorstr='#357E35', GradientType=0);
+	top: 0;
+	left: 100px;
+	position: fixed;
+	text-align: right;
+
+	ul {
+		position: relative;
+		list-style-type: none;
+		li {
+			height:40px;
+			width: 100px;
+
+			display: inline;
+			padding:10px;
+			xbackground-color: #357E35;
+			xbackground-image: -webkit-linear-gradient(top, #6CC16C, #357E35);
+			xbackground-image: -moz-linear-gradient(top, #6CC16C, #357E35);
+			xbackground-image: -ms-linear-gradient(top, #6CC16C, #357E35);
+			xfilter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6CC16C', endColorstr='#357E35', GradientType=0);
 		
-		a, a:hover {
-			color:white;
-			text-align: center;
+			a, a:hover {
+				color:white;
+				text-align: center;
+			}
 		}
 	}
 }
@@ -165,6 +172,7 @@ ul {
 }
 
 .squawk-list {
+	z-index: -999;
 	border: 1px solid #D4D4D4;
 	border-radius: 8px;
 	.squawk-container:first-child {
